# personal_expenses

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yaml  pyproject.toml
app/: analysis.py  main.py  models.py  parser.py  storage.py
tests/: test_batch_and_ui.py  test_persistence_dashboard.py  test_statement_analysis.py
